--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -35,11 +35,15 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 	border: 0px none;
 }
 
-.content-principal{padding: 1em 0 3em 0.5em; font-size:1.2em}
+.content-principal{
+	padding: 1em 0 3em 0.5em; 
+	font-size:0.8em;
+	font-family: Helvetica, Arial, sans-serif;
+	}
 .cartouche{
 	background-color:#FFFFFF;
 	position:absolute;
-	top:12em;	
+	top:19em;	
 	margin:0;
 	height:1em;
 	text-align:center;
@@ -114,7 +118,7 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 }
 
 
-body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 { font-family: 'GoodDogRegular', Arial, sans-serif;color: #63b362 }
+body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 { font-family: 'GoodDogRegular', Arial, sans-serif;color: #ffffff}
 
 .texte {font-size:1.3em}
 
