--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -37,8 +37,6 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 
 .content-principal{
 	padding: 1em 0 3em 0.5em; 
-	font-size:0.8em;
-	font-family: Helvetica, Arial, sans-serif;
 	}
 .cartouche{
 	background-color:#FFFFFF;
@@ -53,7 +51,9 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 .content {
 	float: right;
 	padding:0 1em;
-	color:#FFFFFF
+	color:#FFFFFF;
+	font-size:0.8em;
+	font-family: Helvetica, Arial, sans-serif;		
 }
 
 .chapo{
@@ -319,6 +319,14 @@ ul.home li.end{
     width:25%;
 }
 
+/*Divers*/
+
+.container_pack{width:100%; overflow:hidden;}
+
+.pack{float:left; width:48%; margin : 0 1%}
+
+.pack .prix{float:right}
+
 /*Liens*/
 a {
     color: #63b362;
@@ -333,6 +341,6 @@ a:focus, a:hover, a:active {
    text-decoration:none;
 }
 
-ul.home a, .content a, .extra2 a, #footer a {
+ul.home a, .container a, .extra2 a, #footer a {
 	color:#FFFFFF;
 }
