--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -55,6 +55,7 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 	font-size:0.8em;
 	font-family: Helvetica, Arial, sans-serif;		
 }
+.content .home{font-family: "GoodDogRegular", "Arial", sans-serif;}
 
 .chapo{
 	color:#FFFFFF;
