--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -59,7 +59,8 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 
 .chapo{
 	color:#FFFFFF;
-	font-size:1.4em
+	font-size:1.4em;
+	font-weight:normal;
 	
 }
 
@@ -120,6 +121,8 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 
 
 body,h1,h2,h3,h4,h5,h6,.h1,.h2,.h3,.h4,.h5,.h6 { font-family: 'GoodDogRegular', Arial, sans-serif;color: #ffffff}
+
+h2, .h2{font-size:2.5em}
 
 .texte {font-size:1.3em}
 
