--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -323,13 +323,41 @@ ul.home li.end{
     width:25%;
 }
 
+.liste {padding-bottom:2.5em}
+
+.liste-items .item:hover{background:none}
+
+
+.liste-items .item .info-publi {
+    background: none ;
+
+}
+
 /*Divers*/
 
 .container_pack{width:100%; overflow:hidden;}
 
 .pack{float:left; width:48%; margin : 0 1%}
 
-.pack .prix{float:right}
+.pack .prix, aside.prix{
+	float:right;
+	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.6);
+	padding: 1em;
+	color:#63B362;
+	font-weight:bold;
+	margin-left:1em;
+	margin-bottom:1em;
+	border-left: 0.2em solid #FFFFFF;
+	}
+	
+.pack .prix {border-radius: 0 10px 0 0}
+
+aside.prix {
+	font-size: 110%;
+    font-size: 140%;
+    margin-right: -1em;
+    padding: 1em;
+	}
 
 /*Liens*/
 a {
@@ -348,3 +376,13 @@ a:focus, a:hover, a:active {
 ul.home a, .container a, .extra2 a, #footer a {
 	color:#FFFFFF;
 }
+
+
+/*faq*/
+.faq dt, .aide{cursor: pointer;}
+
+.faq dt span.open{display:inline;}
+.faq dt span.closed{display:none;}
+
+.faq dt.close span.closed{display:inline;}
+.faq dt.close span.open{display:none;}
