--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -347,15 +347,7 @@ background:white;
 }
 
 .formulaire_menu_lang {
-	padding:0.2em;
-    position:absolute;
-    right:0;
-    top:1em;
-    z-index:200;
-    font-size:1.2em;
-    width:10%;
-    color:#63B362;
-    text-align:right;
+
 }
 
 
@@ -395,6 +387,13 @@ aside.prix {
     padding: 1em;
 	}
 
+.tools{
+	padding:0.2em;
+    font-size:1.2em;
+    color:#63B362;
+    text-align:right;	
+	float:right;
+	width:10%}
 /*Liens*/
 a {
     color: #63b362;
