--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -71,9 +71,16 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 	float: right;
 	padding:0 1em;
 	color:#FFFFFF;
-	font-size:0.8em;
 	font-family: Helvetica, Arial, sans-serif;		
 }
+
+.content p, .content dl{	font-size:1.2em;}
+ 
+.content dl p {
+	font-size: 0.9em;
+	padding-left: 0.75em;
+	}
+	
 .content .home{font-family: "GoodDogRegular", "Arial", sans-serif;}
 
 .chapo{
@@ -360,8 +367,6 @@ background:white;
 
 /*Formulaires*/
 
-
-
 /*Divers*/
 
 .container_pack{width:100%; overflow:hidden;}
@@ -382,8 +387,6 @@ background:white;
 .pack .liste_objets_precieux {border-radius: 0 10px 0 0}
 
 aside.prix {
-	font-size: 110%;
-    font-size: 140%;
     margin-right: -1em;
     padding: 1em;
 	}
