--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -407,6 +407,10 @@ aside.contenu_lie{float:right;}
 
 .pack{float:left; width:48%; margin : 0 1%}
 
+
+/*Listes*/
+.content .liste{padding:0 1em;}
+
 .pack .liste_objets_precieux, aside.prix{
 	float:right;
 	background: none repeat scroll 0 0 rgba(255, 255, 255, 0.6);
