je en comprends pas cette position absolur, enlever

--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -249,7 +249,9 @@ ul.home li.end{
 
 }
 
-.extra2 .liste-items .item a{position:absolute; z-index: 300; }
+.extra2 .liste-items .item a{
+	/*position:absolute; */
+	z-index: 300; }
 
 .square{
 	float:left;
