--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -373,10 +373,10 @@ aside.right,.options section.prix{
 	float:right; 
 	width:30%;
 	border-left:#63b362 2px solid;
-	border-bottom:#63b362 2px solid;
+	border-bottom:#63b362 4px solid;
 	border-top-right-radius: 12px;	
 	border-bottom-left-radius: 12px;
-	background-color:#fdfdfd;
+	background-color:#eeeeee;
 	margin:0 0 1% 1%
 	
 }
