--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -24,7 +24,8 @@ h2, .h2{font-size:2em}
 
 /*Layout*/
 html{width:100%; background: #63b362;margin:0 auto;}
-body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
+body { width:800px;background:transparent; margin: 0 	0 0 17.5em;}
+ 	
 .page {
 	position: relative; 
 	width: 100%; 
@@ -83,7 +84,7 @@ body { width:1000px; background:transparent; margin: 0 	0 0 17.5em;}
 	padding-left: 0.75em;
 	}
 	
-.content .home{font-family: "GoodDogRegular", "Arial", sans-serif;}
+.content .home a{font-family: "GoodDogRegular", "Arial", sans-serif;}
 
 .chapo{
 	font-weight:normal;
@@ -199,19 +200,89 @@ ul.home {
 	z-index:200
 }
 
-ul.home li.item{
+ul.box_menu li.item{
+	position:relative;
 	background: none repeat scroll 0 0 #63B362;
     border-radius: 0.4em;
     behavior: url(/PIE.htc);
     float: left;
     height: 6.3em;
     margin: 0 1.2em 0.5em 0;
-    padding-top: 0.2em;
+    padding: 0;
     text-align: center;
-    width: 7.1em;
-    font-size:1.8em}
-    
+    width: 7.3em;
+    font-size:1.8em;
+    overflow:hidden;}
+    	
+ ul.box_menu li.item ul{
+ 	opacity:0.5;
+ 	filter: alpha(opacity = 50);
+ 	background:#eec831;
+ 	padding-bottom:1em;
+ }
+ 
+ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img{
+	opacity:1;
+	filter: alpha(opacity = 100);
+}
 
+ul.box_menu li.item:hover .titre{
+	background:#99cc66;
+}
+
+ ul.box_menu li.item li{
+  	line-height:1.8em;
+  	
+ }   
+        
+ul.box_menu li.logo{
+
+	padding :0}
+
+ul.box_menu li.logo img{
+	opacity:0.5;
+	margin:0;
+	position:absolute;
+	left:-0.01em;
+	top:1em;
+	float:none;
+	padding :0}
+	
+	
+	
+ul.box_menu li.end{
+	margin-right:0
+}
+
+.box_menu .item .titre{
+	line-height:2em;
+}
+
+ul.box_menu li.descriptif .titre{
+	visibility: hidden;
+}
+
+ul.box_menu li.logo .titre{
+	position:absolute;
+	z-index:50;
+	width:100%;}
+
+ul.box_menu li .text{
+ 	opacity:0.5;
+ 	filter: alpha(opacity = 50);
+}
+	
+ul.box_menu li .text p{
+	font-size:0.5em;
+	text-align:left;
+	padding:0.5em;
+}
+
+ul.box_menu li.descriptif .text p{
+	font-size:0.8em;
+	text-align:center;
+	padding:0.5em;
+}
 .extra2 .liste-items li.on{
 	background-color:transparent;
 	border-right:none;
@@ -233,9 +304,7 @@ ul.home li.item{
 	behavior: url(/PIE.htc);
 	}   
     
-ul.home li.end{
-	margin-right:0
-}
+
   
 .extra2 .liste-items .item{
 	position:relative;
@@ -284,22 +353,6 @@ ul.home li.end{
 	border-top: 0px none;
 }
 
-
-.white_box{
-	height:56%;
-	width: 90%;
-	background-color:#ffffff;
-	border: 1px solid  #ffffff;
-	border-radius:0.4em;
-	behavior: url(/PIE.htc);
-	margin:0 4% 0.2em 3%;
-}
-
-.text{
-  font-size: 140%;
-  line-height: 0.7em;
-  font-size:1.3em
-}
 
 .hornav {
     background-color: transparent;
