--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -149,7 +149,7 @@ body {
 
 
 #nom_site_spip{
- 	font-size: 11.7em;
+ 	font-size: 11.8em;
     letter-spacing: 0.1em;
     line-height: 110px;
     text-align: center;
@@ -241,6 +241,12 @@ ul.box_menu li.item{
  	padding-bottom:1em;
  }
  
+ ul.box_menu li.item ul li.row_1{background:#f9ed72;}
+  
+ ul.box_menu li.item ul li.row_1 a{color:#eec831;} 
+ 
+ul.box_menu li.item ul a{color:#f9ed72;}
+ 
 ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img{
 	opacity:1;
 	filter: alpha(opacity = 100);
@@ -251,9 +257,21 @@ ul.box_menu li.item:hover .titre{
 }
 
  ul.box_menu li.item li{
-  	line-height:2.3em;
+  	line-height:2.5em;
   	
- }   
+ } 
+ 
+ul.box_menu li.site_slider{
+	background : url("images/screen.png") no-repeat scroll center 1.9em #63B362;
+	z-index:50
+	
+}
+
+ul.box_menu li.site_slider #sjcycle_sites{
+	left:0.5em;
+	top: -0.4em;
+}
+   
         
 ul.box_menu li.logo{
 
@@ -275,7 +293,7 @@ ul.box_menu li.end{
 }
 
 .box_menu .item .titre{
-	line-height:2.3em;
+	line-height:2.5em;
 }
 
 ul.box_menu li.descriptif .titre{
@@ -303,6 +321,8 @@ ul.box_menu li.descriptif .text p{
 	text-align:center;
 	padding:0.5em;
 }
+
+
 .extra2 .liste-items li.on{
 	background-color:transparent;
 	border-right:none;
