--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -36,9 +36,9 @@ body {
 	}
  	
 .page {
- 	border: 1px solid transparent;
+ 	border: none;
     box-shadow: none;
-    margin: 3em auto;
+    margin: 8em auto;
     width: 747px;
     padding: 0 2em;
     position: relative;
@@ -46,11 +46,9 @@ body {
 	}
 
 #header{
-	margin-top:1em;
+	top:-5em;
 	text-align:center;
-	position:absolute;
-	top:-4em;
-	left:0;
+	position:relative;
 	z-index:90;
 	width:100%;
 }
@@ -66,7 +64,7 @@ body {
 .home .container {
 	background-color:#FFFFFF;
 	border: 0px none;
-	margin-top:10em;
+	margin-top:0;
 }
 
 .content-principal{
@@ -155,6 +153,7 @@ body {
     text-align: center;
     width:100%;
     background:#63B362;
+    border: #FFFFFF 2px solid;
    	border-radius: 0.05em;
     behavior: url(/PIE.htc);
     padding: 0 0.1em;
@@ -247,7 +246,7 @@ ul.box_menu li.item{
  
 ul.box_menu li.item ul a{color:#f9ed72;}
  
-ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img{
+ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img, ul.box_menu li.site_slider:hover #sjcycle_sites{
 	opacity:1;
 	filter: alpha(opacity = 100);
 }
@@ -261,17 +260,21 @@ ul.box_menu li.item:hover .titre{
   	
  } 
  
-ul.box_menu li.site_slider{
-	background : url("images/screen.png") no-repeat scroll center 1.9em #63B362;
-	z-index:50
+ul.box_menu li.site_slider{	
+
 	
 }
 
 ul.box_menu li.site_slider #sjcycle_sites{
-	left:0.5em;
-	top: -0.4em;
+	margin-left:0.5em;
+	text-align: center;
+	background : url("images/screen.png") no-repeat scroll 0 0.1em #63B362;
+	z-index:50;
+ 	opacity:0.5;
+ 	filter: alpha(opacity = 50);	
 }
-   
+  
+ul.box_menu li.site_slider #sjcycle_sites img{padding:0.3em 0.2em}
         
 ul.box_menu li.logo{
 
