--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -2,11 +2,11 @@
 
 @font-face {
     font-family: 'GoodDogRegular';
-    src: url('gooddog-webfont.eot');
-    src: url('gooddog-webfont.eot?#iefix') format('embedded-opentype'),
-         url('gooddog-webfont.woff') format('woff'),
-         url('gooddog-webfont.ttf') format('truetype'),
-         url('gooddog-webfont.svg#gooddogregular') format('svg');
+    src: url('font/gooddog-webfont.eot');
+    src: url('font/gooddog-webfont.eot?#iefix') format('embedded-opentype'),
+         url('font/gooddog-webfont.woff') format('woff'),
+         url('font/gooddog-webfont.ttf') format('truetype'),
+         url('font/gooddog-webfont.svg#gooddogregular') format('svg');
     font-weight: normal;
     font-style: normal;
 
