--- a/squelettes/css/styles_ie.css
+++ b/squelettes/css/styles_ie.css
@@ -1,7 +1,4 @@
-
-.extra2 .liste-items .item{
-	background-color:transparent;
-}
+.extra2 .liste-items .item{background-color:transparent;}
 
 .extra2 .liste-items .on{
 	/* For IE 5.5 - 7*/	
@@ -9,7 +6,6 @@
 	/* For IE 8*/	
 	-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#1963B362, endColorstr=#1963B362)";	
 }
-
 
 
 #extra1 {
