--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -278,6 +278,10 @@ ul.box_menu dt, ul.box_menu dd{
 
 ul.box_menu dl dt{font-weight:normal; font-size:0.9em}
 
+ul.box_menu dl .spip_logos{
+	margin: 0 0.2em 0.1em 0;
+	}
+
 ul.box_menu dl p {
     font-size: 0.6em;
 	margin:0;
@@ -317,8 +321,7 @@ ul.box_menu li.site_slider:hover .slider{
 		background-color:#64b362;
 }
 
-ul.box_menu li.site_slider:hover #sjcycle_sites,ul.box_menu li.site_slider:hover #sjcycle_sites a:hover{
-
+ul.box_menu li.site_slider:hover #sjcycle_sites,ul.box_menu li.site_slider:hover #sjcycle_sites a:hover, ul.box_menu li.item:hover .images{
 	opacity:1;
 	filter: alpha(opacity = 100);
 }
@@ -341,11 +344,14 @@ ul.box_menu li.logo{
 
 ul.box_menu li.logo img{
 	opacity:0.5;
+	filter: alpha(opacity = 50);
 	margin:0;
 	float:none;
 	padding :0}
 	
 ul.box_menu li.logo_auteurs .images{
+		opacity:0.5;
+	filter: alpha(opacity = 50);
 	margin:0;
 	padding :0}	
 	
@@ -371,6 +377,7 @@ ul.box_menu li.item:hover img.desaturate{
 filter: none;
 filter: grayscale(0%);
 background-color:#64b362;
+;
 }
 
 ul.box_menu li.logo_auteurs hover
@@ -408,6 +415,10 @@ ul.box_menu li .text p{
 	color:white;
 	text-align:center;
 	padding:2em 0.3em;
+}
+
+ul.box_menu li.descriptif .text{
+	background-color:#64b362;
 }
 
 ul.box_menu li.descriptif .text p{
