correction opera, pas terminé

--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -236,7 +236,7 @@ ul.box_menu li.item{
     overflow:hidden;}
     	
  ul.box_menu li.item ul{
-
+	height:164px;
  	background:none;
  	padding-bottom:1em;
  }
@@ -248,8 +248,17 @@ ul.box_menu li.item{
   
  ul.box_menu li.item ul li.row_1 a{color:#eec831;} 
  
- ul.box_menu li.item ul li.row_2{background:#edc831;}
-  ul.box_menu li.item:hover  ul li.row_2{background:#edc831;}
+ ul.box_menu li.item ul li.row_2{
+ 	background:#edc831;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;
+	padding-bottom:0.05em
+ 	}
+  ul.box_menu li.item:hover  ul {
+
+  	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;	
+  	}
  
  ul.box_menu li.item ul li.row_2 a{color:#f9ed72;}
  
@@ -257,19 +266,23 @@ ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.it
 	opacity:1;
 	filter: alpha(opacity = 100);
 	background-color: #63B362;
+
 }
 
 ul.box_menu li.item:hover .titre{
 	background:#99cc66;
+	border-top-left-radius: 0.4em;
+ 	border-top-right-radius: 0.4em;
 }
 
 ul.box_menu dl {
 	background:#e93eda;
-
-	height:	170px;
 	text-align:left;
-	padding:0.3em 0 0 0.2em;
-	margin:0}
+	padding-left:0.3em;
+	margin:0;
+	height:	164px;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;}
 	
 ul.box_menu dt, ul.box_menu dd{
 	opacity:0.1;
@@ -306,7 +319,10 @@ ul.box_menu li.site_slider{
 ul.box_menu li.site_slider .slider{
 	text-align: center;
 	background-color:#7ca2ed;
-	padding-left:0.4em
+	padding-left:0.4em;
+	height:	164px;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;
 }
 
 ul.box_menu li.site_slider #sjcycle_sites{
@@ -331,16 +347,14 @@ ul.box_menu li.site_slider:hover #sjcycle_sites,ul.box_menu li.site_slider:hover
 }
   
 ul.box_menu li.site_slider #sjcycle_sites img{
-		opacity:2;
+	opacity:2;
 	filter: alpha(opacity = 20);
 	position:relative;
 	top:0.3em;
 	left:0.14em;
 	}
         
-ul.box_menu li.logo{
-
-	padding :0}
+ul.box_menu li.logo{padding :0}
 
 ul.box_menu li.logo img{
 	opacity:0.5;
@@ -350,10 +364,14 @@ ul.box_menu li.logo img{
 	padding :0}
 	
 ul.box_menu li.logo_auteurs .images{
-		opacity:0.5;
+	opacity:0.5;
 	filter: alpha(opacity = 50);
 	margin:0;
-	padding :0}	
+	padding :0;
+	height:	164px;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em;	
+	}	
 	
 ul.box_menu li.logo_auteurs .image{
 	float:left;
@@ -377,7 +395,6 @@ ul.box_menu li.item:hover img.desaturate{
 filter: none;
 filter: grayscale(0%);
 background-color:#64b362;
-;
 }
 
 ul.box_menu li.logo_auteurs hover
@@ -403,10 +420,12 @@ ul.box_menu li.descriptif .titre{
 
 ul.box_menu li .text{
 	background-color: #969583;
-	height:	170px;
+	height:	164px;
  	opacity:1;
  	filter: alpha(opacity = 100);
  	line-height: 0.8em;
+ 	border-bottom-left-radius: 0.4em;
+ 	border-bottom-right-radius: 0.4em; 	
 }
 
 	
