--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -23,7 +23,7 @@ h2, .h2{font-size:2em}
 
 
 /*Layout*/
-html{width:100%; background: #63b362;margin:0 auto;}
+html{width:100%; background: #63b362;margin:0 auto;padding:0}
 body {
 	background:#ffffff;
 	border-radius: 1em;
@@ -33,6 +33,7 @@ body {
 	/*margin: 0 	0 0 17.5em;*/
 	margin : 0 auto;
 	position:relative;
+	z-index:50;
 	}
  	
 .page {
@@ -121,10 +122,9 @@ body {
 .extra1{
 	position: fixed;
 	top:0;
-	bottom:0;
 	left:0;
 	z-index:50;
-	width:42em;
+	width:42%;
 	margin:0;
 	padding:0;
 	}
