--- a/squelettes/css/habillage.css
+++ b/squelettes/css/habillage.css
@@ -125,6 +125,7 @@ body {
 	left:0;
 	z-index:50;
 	width:42%;
+	height:100%;
 	margin:0;
 	padding:0;
 	}
@@ -234,6 +235,13 @@ ul.box_menu li.item{
     width: 244px;
     font-size:2.5em;
     overflow:hidden;}
+    
+ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
+	opacity:1;
+	filter: alpha(opacity = 100);
+    border-radius: 0.4em;
+    behavior: url(/PIE.htc);	
+	}
     	
  ul.box_menu li.item ul{
 	height:164px;
@@ -254,20 +262,15 @@ ul.box_menu li.item{
  	border-bottom-right-radius: 0.4em;
 	padding-bottom:0.05em
  	}
-  ul.box_menu li.item:hover  ul {
-
+  ul.box_menu li.item:hover ul li.row_2{
+	background:#edc831;
   	border-bottom-left-radius: 0.4em;
  	border-bottom-right-radius: 0.4em;	
   	}
  
  ul.box_menu li.item ul li.row_2 a{color:#f9ed72;}
  
-ul.box_menu li.item:hover ul, ul.box_menu li.item:hover .text, ul.box_menu li.item:hover img,ul.box_menu li.item:hover dt, ul.box_menu li.item:hover dd, ul.box_menu li.item:hover dl{
-	opacity:1;
-	filter: alpha(opacity = 100);
-	background-color: #63B362;
 
-}
 
 ul.box_menu li.item:hover .titre{
 	background:#99cc66;
@@ -369,15 +372,16 @@ ul.box_menu li.logo_auteurs .images{
 	margin:0;
 	padding :0;
 	height:	164px;
- 	border-bottom-left-radius: 0.4em;
- 	border-bottom-right-radius: 0.4em;	
+	
 	}	
 	
 ul.box_menu li.logo_auteurs .image{
 	float:left;
-	width:50%;}	
+	height:164px;
+	overflow:hidden;
+	z-index:20}	
 	
-img.desaturate{
+ul.box_menu li.logo_auteurs img{
 -webkit-filter: grayscale(100%);
 -moz-filter: grayscale(100%);
 -ms-filter: grayscale(100%);
@@ -385,9 +389,12 @@ img.desaturate{
 filter: url(images/desaturate.svg#greyscale);
 filter: grayscale(100%);
 filter: gray;
+z-index:10;
+border-bottom-right-radius: 0.4em;
+border-bottom-left-radius: 0.4em;
 }
 
-ul.box_menu li.item:hover img.desaturate{
+ul.box_menu li.item:hover img{
 -webkit-filter: grayscale(0%);
 -moz-filter: grayscale(0%);
 -ms-filter: grayscale(0%);
@@ -395,13 +402,15 @@ ul.box_menu li.item:hover img.desaturate{
 filter: none;
 filter: grayscale(0%);
 background-color:#64b362;
+z-index:10;
+border-bottom-right-radius: 0.4em;
+border-bottom-left-radius: 0.4em;
 }
 
-ul.box_menu li.logo_auteurs hover
-		
-.image_1{}
 
-.image_2{}
+.image_1{padding-right:17px;}
+
+.image_2{padding-left:17px;}
 	
 ul.box_menu li.end{
 	margin-right:0
